# NeoGRAG

./: .gitignore  NED.py  README.md  api.py  classification.py  collect_data.py  embedding.py  evaluate_rag.py  graph_rag.py  knowledge_graph.py  main.py  model_train.py  pyproject.toml  rag.py  route.py  vector_store.py
data/classify/: binary.csv  binary_test_data.txt  binary_train_data.txt  dataset.csv  settings.ini  test_data.txt  train_data.txt
data/evaluate/: dataset.xlsx
data/processed/: 1.csv  1.md  1.xlsx  10.csv  10.md  10.xlsx  2.csv  2.md  2.xlsx  3.csv  3.md  3.xlsx  4.csv  4.md  4.xlsx  5.csv  5.md  5.xlsx  6.csv  6.md  6.xlsx  7.csv  7.md  7.xlsx  8.csv  8.md  8.xlsx  9.csv  9.md  9.xlsx
prompt/: augment.txt  chitchat.txt  extract_relationships.txt  graphrag_query.txt  question_generate.txt  rag_query.txt  vietnamese_spelling.txt
web_application/: .gitignore  Readme.md  firebase.config.js  index.html  package-lock.json  package.json
web_application/public/: landing.html
web_application/public/assets/css/: main.css
web_application/public/assets/js/: main.js
web_application/src/: App.jsx  index.css
web_application/src/assets/: assets.js
web_application/src/components/Sidebar/: Sidebar.css  Sidebar.jsx
web_application/src/components/Window/: Window.css  Window.jsx
web_application/src/pages/: Home.jsx
web_application/src/pages/Auth/: Auth.css  Auth.jsx  PrivateRouter.jsx
web_application/src/pages/Upload/: Upload.css  Upload.jsx
